docs: optimize root README.md
Co-authored-by: Xun Zhang <422536698@qq.com>